# crucible-rs

.github/workflows/: release.yml
crucible-rs/: Cargo.toml
crucible-rs/src/: main.rs
crucible-rs/src/core/: config.rs  fingerprint.rs  game.rs  gamescope.rs  launcher.rs  mod.rs  paths.rs  process.rs  proton.rs  shortcut.rs  steam.rs  umu_update.rs
crucible-rs/src/ui/: app.rs  game_dialog.rs  library.rs  mod.rs  proton_page.rs  settings_page.rs  state.rs  window.rs
