[package]
name = "crucible"
version = "0.3.0"
edition = "2021"
description = "Linux launcher for Windows games via UMU and Proton — native GTK4/libadwaita rewrite"

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
# ── UI ─────────────────────────────────────────────────────────────────────
gtk4       = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib       = "0.20"
gio        = "0.20"
gdk4       = "0.9"
gdk-pixbuf = "0.20"

# ── Async / concurrency ────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── HTTP ──────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── Serialization ─────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Archive extraction ─────────────────────────────────────────────────────
tar    = "0.4"
flate2 = "1"
xz2    = "0.1"

# ── Error handling ─────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────────────────
log        = "0.4"
env_logger = "0.11"

# ── System / Linux ────────────────────────────────────────────────────────
# Valid nix 0.29 features (verified from compiler output):
# process=waitpid/fork, signal=kill/Signal, resource=getrlimit
# unistd/fcntl/errno/stat are always compiled — no feature flag needed
nix = { version = "0.29", features = ["process", "signal", "resource", "fs"] }
libc = "0.2"   # raw fd ops (open/dup2/close) used in double-fork
dirs    = "5"
uuid    = { version = "1", features = ["v4"] }
chrono  = { version = "0.4", features = ["serde"] }
regex   = "1"
shlex   = "1"
walkdir = "2"
which   = "6"
url     = "2"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
